--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,8 @@
 @import "mixins";
 @import "dashboard";
 @import "products";
+@import "chart";
+@import "dashboardapp";
 
 :root{
     font-family: Arial, sans-serif;
